--- a/kitty.conf
+++ b/kitty.conf
@@ -1,8 +1,8 @@
 # vim:fileencoding=utf-8:foldmethod=marker
 
-map F5 launch --location=hsplit
-map F6 launch --location=vsplit
-map F7 layout_action rotate
+# map F5 launch --location=hsplit
+# map F6 launch --location=vsplit
+# map F7 layout_action rotate
 
 # map shift+up move_window up
 # map shift+left move_window left
@@ -20,7 +20,7 @@ map F7 layout_action rotate
 #: individual font faces and even specify special fonts for particular
 #: characters.
 
-font_family      FiraCode-Regular
+font_family Fira Code Regular Nerd Font Complete
 # bold_font        auto
 # italic_font      auto
 # bold_italic_font auto
@@ -37,7 +37,7 @@ font_family      FiraCode-Regular
 #:     italic_font      Operator Mono Book Italic
 #:     bold_italic_font Operator Mono Medium Italic
 
-# font_size 11.0
+font_size 12.0
 
 #: Font size (in pts)
 
@@ -561,8 +561,7 @@ enabled_layouts horizontal
 #: the borders that separate the inactive window from a neighbor. Note
 #: that setting a non-zero window margin overrides this and causes all
 #: borders to be drawn.
-
-# window_margin_width 0
+ window_margin_width 0
 
 #: The window margin (in pts) (blank area outside the border). A
 #: single value sets all four sides. Two values set the vertical and
@@ -578,7 +577,7 @@ enabled_layouts horizontal
 #: values set top, horizontal and bottom. Four values set top, right,
 #: bottom and left.
 
-# window_padding_width 0
+# window_padding_width 2
 
 #: The window padding (in pts) (blank area between the text and the
 #: window border). A single value sets all four sides. Two values set
@@ -599,7 +598,7 @@ enabled_layouts horizontal
 #: The color for the border of the active window. Set this to none to
 #: not draw borders around the active window.
 
-# inactive_border_color #cccccc
+inactive_border_color #cccccc
 
 #: The color for the border of inactive windows
 
@@ -773,7 +772,7 @@ enabled_layouts horizontal
 
 #: The foreground and background colors
 
-# background_opacity 0.2
+# background_opacity 0.8
 
 #: The opacity of the background. A number between 0 and 1, where 1 is
 #: opaque and 0 is fully transparent.  This will only work if
